NIFI-11985: Add ConsumeElasticsearch processor
Signed-off-by: Joe Gresock <jgresock@gmail.com>
This closes #7671.